Bug 100154 - FILEOPEN: XLSX - Pointer to sheet with dotted name in cyrillic has incorrect reference format
Summary: FILEOPEN: XLSX - Pointer to sheet with dotted name in cyrillic has incorrect ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.2 inRelease...
Keywords: filter:xlsx
: 170606 (view as bug list)
Depends on:
Blocks: XLSX Sheet Cell-Reference
  Show dependency treegraph
 
Reported: 2016-05-31 06:15 UTC by Andrew
Modified: 2026-06-10 11:27 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
xlsx with dotted sheet (9.51 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2016-05-31 06:15 UTC, Andrew
Details
dotted sheet - reversed (ods original) (8.57 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-02-01 07:24 UTC, Andrew
Details
dotted sheet - reversed (xlsx exported) (7.61 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-02-01 07:25 UTC, Andrew
Details
xlsx with error (6.56 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-10-19 09:12 UTC, Vladimir Silantiev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew 2016-05-31 06:15:04 UTC
Created attachment 125407 [details]
xlsx with dotted sheet

If sheet in xlsx has dotted name in russian, pointer to it not converted
This problem only in xlsx, not in xls
Example attached
Comment 1 m_a_riosv 2016-05-31 10:58:20 UTC
Seems the sheet name with dots needs to be between single quotes, It' mandatory where it contains other characters than alphanumeric or underscore.

Help link:

https://help.libreoffice.org/Calc/Renaming_Sheets

Resolved as not a bug, if you are not agree, please reopen it.
Comment 2 Andrew 2016-05-31 11:03:07 UTC
Please attention: this is .docx document!!!
This is problem is compatibility problem.

You also can open this document in Excel and save as .xls
In this case LibreOffice open it correctly.
Comment 3 Buovjaga 2016-06-02 13:51:34 UTC
Confirmed.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab0189433c1593c3c3ccf6a947aa7ba84e806d91
CPU Threads: 8; OS Version: Linux 4.5; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Built on May 28th 2016
Comment 4 Bartosz 2016-08-04 00:19:54 UTC
Please attach ods file format which could be next exported into .xlsx
Comment 5 QA Administrators 2017-01-31 00:29:03 UTC Comment hidden (obsolete)
Comment 6 m_a_riosv 2017-02-01 00:41:23 UTC
With attached sample works for me with:
Version: 5.2.5.1 (x64)
Build ID: 0312e1a284a7d50ca85a365c316c7abbf20a4d22
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
Locale: es-ES (es_ES); Calc: group
Comment 7 Andrew 2017-02-01 04:19:30 UTC
At the moment I checked this error in 5.3.0.3
It is still present in 5.3.0.3
I think that this error is very simple and stable to repeat.
I do not know what additional information do you need?
Comment 8 Buovjaga 2017-02-01 06:37:17 UTC
(In reply to Andrew from comment #7)
> I do not know what additional information do you need?

Please read your email notifications.. Bartosz asked for an ODS on 2016-08-04, comment 4
Comment 9 Andrew 2017-02-01 07:24:38 UTC
Created attachment 130808 [details]
dotted sheet - reversed (ods original)
Comment 10 Andrew 2017-02-01 07:25:02 UTC
Created attachment 130809 [details]
dotted sheet - reversed (xlsx exported)
Comment 11 Andrew 2017-02-01 07:25:19 UTC
(In reply to Buovjaga from comment #8)
> (In reply to Andrew from comment #7)
> > I do not know what additional information do you need?
> 
> Please read your email notifications.. Bartosz asked for an ODS on
> 2016-08-04, comment 4

I do not understand why, but the attached file.
there original .ods file and exported to .xlsx
I pay attention that there is no problem with export. the problem is with the import.
Comment 12 Buovjaga 2017-02-01 08:50:43 UTC
(In reply to Andrew from comment #11)
> I pay attention that there is no problem with export. the problem is with
> the import.

What is the problem with import? I don't see any problem. Everything is in correct order, not reversed.
Comment 13 Andrew 2017-02-01 09:47:05 UTC
(In reply to Buovjaga from comment #12)
> (In reply to Andrew from comment #11)
> > I pay attention that there is no problem with export. the problem is with
> > the import.
> 
> What is the problem with import? I don't see any problem. Everything is in
> correct order, not reversed.

Please open first file (https://bugs.documentfoundation.org/attachment.cgi?id=125407) and recalculate. Also you can see incorrect reference format.
Comment 14 Buovjaga 2017-02-01 09:51:19 UTC
(In reply to Andrew from comment #13)
> Please open first file
> (https://bugs.documentfoundation.org/attachment.cgi?id=125407) and
> recalculate. Also you can see incorrect reference format.

Sure, but I can't see the problem with the new file.

You never explained, where attachment 125407 [details] came from. Did it come from Microsoft Excel? Version..?
Comment 15 Andrew 2017-02-01 09:54:31 UTC
(In reply to Buovjaga from comment #14)
> (In reply to Andrew from comment #13)
> > Please open first file
> > (https://bugs.documentfoundation.org/attachment.cgi?id=125407) and
> > recalculate. Also you can see incorrect reference format.
> 
> Sure, but I can't see the problem with the new file.
> 
> You never explained, where attachment 125407 [details] came from. Did it
> come from Microsoft Excel? Version..?

This is come from MS Excel 2013. But this problem present in Excel 2016 also.
Comment 16 m_a_riosv 2017-02-01 10:23:12 UTC
Sorry my mistake testing.
Comment 17 Andrew 2017-12-12 06:41:55 UTC
6.0.0.0.beta2
No changes. :-(
Comment 18 Dmitriy 2018-01-17 14:08:56 UTC Comment hidden (no-value)
Comment 19 QA Administrators 2019-01-18 03:59:23 UTC Comment hidden (obsolete)
Comment 20 NISZ LibreOffice Team 2020-06-02 09:32:30 UTC
Reference is still imported as: 
=имя.листа!a7
vs
=$'sheet.name'.A7

The former becomes a #NAME? error after Ctrl-Shift-F9, the latter works correctly.

Version: 7.0.0.0.alpha1 (x86)
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: Skia/Raster; VCL: win; 
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 21 Katka 2021-08-08 10:47:23 UTC
Still repro:

Reference is still imported as: 
=имя.листа!a7
vs
=$'sheet.name'.A7

The former becomes a #NAME? error after Ctrl-Shift-F9, the latter works correctly.

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cb2827f5f65324f309fa0e3c30d0b19ad237410e
CPU threads: 16; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Comment 22 Vladimir Silantiev 2022-10-19 09:12:33 UTC
Created attachment 183130 [details]
xlsx with error
Comment 23 Vladimir Silantiev 2022-10-19 09:17:02 UTC
Still repro:

Reference is still imported as: 
=имя.листа!a7
vs
=$'sheet.name'.A7

The former becomes a #NAME? error after Ctrl-Shift-F9, the latter works correctly.

Created attachment 1183130 [details]
 
When opened through Libreoffice Calc incorrect data and error after Ctrl-Shift-F9

Version: 7.4.2.3 / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 24 QA Administrators 2024-10-19 03:17:53 UTC Comment hidden (obsolete)
Comment 25 Saburo 2026-02-05 05:36:12 UTC
*** Bug 170606 has been marked as a duplicate of this bug. ***
Comment 26 Saburo 2026-02-05 05:45:52 UTC
still in
Version: 26.2.0.3 (X86_64)
Build ID: 620(Build:3)
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

When exchanging data between LibO and MSO users,
when saving in LibO, the name is 'Sheet.name', but when saving in MSO, the apostrophe is removed, causing an error on the LibO user's side.
Comment 27 Commit Notification 2026-02-08 09:47:58 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20d62f4a29798fe35d8a89902d8662b9a3f444bf

tdf#100154 Treat non-ASCII characters as non-digits

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2026-02-09 09:30:30 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/48b934e5c2cac3da0313d8e77ef8dfed59729006

tdf#100154 Treat non-ASCII characters as non-digits

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.