tdf#100154 Treat non-ASCII characters as non-digits

In the original implementation, when importing,
sheet names consisting only of non-ASCII characters
separated by '.' are treated as strings, not
references. However, MS Office handles such names
and saves them in .xlsx files, causing formulas with
references to such sheets imported into LO to
produce incorrect values ​​after recalculation.

This fix consists of treating non-ASCII characters as
non-digits.

Change-Id: I4427692c7293e1f41ed48a70b3b53fd180173299
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198775
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 20d62f4a29798fe35d8a89902d8662b9a3f444bf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198949
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>